Newer Java 9 EA uses --add-modules instead of -addmods